# MEDFORD

./: .pre-commit-config.yaml  LICENSE  pyproject.toml  pytest.ini  spec.md  spec.txt
.github/workflows/: publish.yaml  test.yaml
DEPRECIATED_tests/: test_detail.py  test_detailparser.py  test_linereader.py  test_medford.py  test_pydanticModels.py
samples/: DeSalvo-2010.mfd  Mayfield-2014.mfd  Pooyaei_Mehr_2013.mfd  Shpilker_2021.mfd  Shpilker_2021.mfd.JSON  all_syntax_errs.MFD  comment_bug.mfd  dnc.MFD  dnc.MFD.JSON  made_up_BCODMO.MFD  made_up_BCODMO.MFD.JSON  made_up_Freeform.MFD  made_up_Freeform.MFD.JSON  pdam_cunning.MFD  pdam_cunning.MFD.JSON
samples/bagit_example/: LICENSE  made_up_BAGIT.MFD  made_up_BAGIT.MFD.JSON
samples/bagit_example/made_up_BAGIT_BAG/data/: made_up_BAGIT.MFD
src/MEDFORD/: medford.py  mfdglobals.py
src/MEDFORD/models/: generics.py
src/MEDFORD/objs/: dictionizer.py  linecollections.py  linecollector.py  linereader.py  lines.py
src/MEDFORD/submodules/mfdvalidator/: errors.py  notice.py  validator.py
tests/: __init__.py  pytest.ini  test_custom_errors.py  test_dictionizer.py  test_integration.py  test_lines.py  test_new_pydantic.py  test_obj_linecollector.py  test_obj_linereader.py
tests/models/: test_generics.py
