[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "medford"
version = "2.0.1"
authors = [{name = "Polina Shpilker", email = "polina.shpliker@tufts.edu"}]
description = "The MEDFORD Command Line tool for validating & compiling medford research metadata files."
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["pydantic==2.4.2"]

[tool.hatch.build.targets.wheel]
packages = ["src/MEDFORD"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
exclude = ["DEPRECIATED_tests/*"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E741", "F405", "F841", "F403"]

[tool.uv]
dev-dependencies = ["ruff", "mypy", "pre-commit", "pytest>=8.3.4"]
